--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-    <header>
+    <header class="header">
         <nav>
             <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
             <ul>
@@ -22,6 +22,18 @@
                 <li> <button class="button-primary">Hire Me</button></li>
             </ul>
         </nav>
+        <div class="banner">
+            <div class="banner-content">
+                <h3 class="banner-greetings">Hi, I am </h3>
+                <h1 class="banner-title">Mary Hardy</h1>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eveniet quae corrupti perspiciatis voluptas, sapiente ab laborum earum quo facilis quod repellendus impedit doloribus neque. Explicabo, commodi cupiditate! Voluptate, deleniti fugiat?</p>
+    
+                <button class="button-primary">Download CV</button>
+                <button class="button-primary">Contact</button>
+            </div>
+            <img class="profile-pic" src="images/hardy.png" alt="">
+        </div>
+
     </header>
 
     <main>
