--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="banner-content">
                 <h3 class="banner-greetings">Hi, I am </h3>
                 <h1 class="banner-title">Mary Hardy</h1>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eveniet quae corrupti perspiciatis voluptas, sapiente ab laborum earum quo facilis quod repellendus impedit doloribus neque. Explicabo, commodi cupiditate! Voluptate, deleniti fugiat?</p>
+                <p class="banner-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eveniet quae corrupti perspiciatis voluptas, sapiente ab laborum earum quo facilis quod repellendus impedit doloribus neque. Explicabo, commodi cupiditate! Voluptate, deleniti fugiat?</p>
     
                 <button class="button-primary">Download CV</button>
                 <button class="button-primary">Contact</button>
@@ -37,7 +37,10 @@
     </header>
 
     <main>
-
+        <section class="about">
+            <h3 class="section-title">About Me</h3>
+            <p class="section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam recusandae assumenda non aut nesciunt nostrum, earum eius ratione debitis. Odio, nobis esse. Reiciendis recusandae numquam voluptate molestiae eum iste ratione!</p>
+        </section>
     </main>
 
     <footer>
