about info aligned

--- a/index.html
+++ b/index.html
@@ -39,7 +39,28 @@
     <main>
         <section class="about">
             <h3 class="section-title">About Me</h3>
-            <p class="section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam recusandae assumenda non aut nesciunt nostrum, earum eius ratione debitis. Odio, nobis esse. Reiciendis recusandae numquam voluptate molestiae eum iste ratione!</p>
+            <p class="section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam recusandae assumenda non aut nesciunt nostrum, earum eius ratione debitis. Odio, nobis esse. Reiciendis recusandae numquam voluptate molestiae eum iste ratione!
+            </p>
+            <div class="about-info-container">
+
+                <div class="about-info">
+                    <h4 class="info-title">Name:</h4>
+                    <p class="info-description">Mary Hardy </p>
+                </div>
+                <div class="about-info">
+                    <h4 class="info-title">Email:</h4>
+                    <p class="info-description">info@gmail.com</p>
+                </div>
+                <div class="about-info">
+                    <h4 class="info-title">Date of birth</h4>
+                    <p class="info-description">11 November 1987</p>
+                </div>
+                <div class="about-info">
+                    <h4 class="info-title">From:</h4>
+                    <p class="info-description">Los Angeles,USA</p>
+                </div>
+    
+            </div>
         </section>
     </main>
 
