--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     </header>
 
     <main>
+        <!-- Section : About ---------------------------->
         <section class="about">
             <h3 class="section-title">About Me</h3>
             <p class="section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam recusandae assumenda non aut nesciunt nostrum, earum eius ratione debitis. Odio, nobis esse. Reiciendis recusandae numquam voluptate molestiae eum iste ratione!
@@ -62,6 +63,37 @@
     
             </div>
         </section>
+
+        <!-- Section : What I do ---------------------------------->
+        <section>
+            <h3 class="section-title">What I do</h3>
+            <p id="what-i-do-desc" class="section-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam voluptatem, molestias quidem nam harum eaque sunt deserunt odit sapiente provident fugit itaque ipsum quis in tempora laborum ea, accusantium voluptatibus.
+            </p>
+            <div class="skills-container">
+                <div class="skill">
+                    <img src="images/icons/js.png" alt="">
+                    <h3 class="skill-title">Vanilla JavaScript</h3>
+                    <p class="skill-desc">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/react.png" alt="">
+                    <h3 class="skill-title">React</h3>
+                    <p class="skill-desc">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/nodejs.png" alt="">
+                    <h3 class="skill-title">Node.js</h3>
+                    <p class="skill-desc">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/mongo.png" alt="">
+                    <h3 class="skill-title">MongoDB</h3>
+                    <p class="skill-desc">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+            </div>
+        </section>
+
+
     </main>
 
     <footer>
