--- a/index.html
+++ b/index.html
@@ -102,21 +102,21 @@
                     <h3 class="resume-column-title">My Education</h3>
                     <div class="resume-item">
                         <h2 class="resume-item-title">Master in Computer Engineering</h2>
-                        <h3 class="resume-item-institue">Harvard University / 2015 - 2017</h3>
+                        <h3 class="resume-item-institute">Harvard University / 2015 - 2017</h3>
                         <p class="resume-item-desc">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.                       
                         </p>
                     </div>
                     <hr>
                     <div class="resume-item">
                         <h2 class="resume-item-title">Master in Computer Engineering</h2>
-                        <h3 class="resume-item-institue">Harvard University / 2015 - 2017</h3>
+                        <h3 class="resume-item-institute">Harvard University / 2015 - 2017</h3>
                         <p class="resume-item-desc">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.                       
                         </p>
                     </div>
                     <hr>
                     <div class="resume-item">
                         <h2 class="resume-item-title">Master in Computer Engineering</h2>
-                        <h3 class="resume-item-institue">Harvard University / 2015 - 2017</h3>
+                        <h3 class="resume-item-institute">Harvard University / 2015 - 2017</h3>
                         <p class="resume-item-desc">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.                       
                         </p>
                     </div>
@@ -142,6 +142,9 @@
                         </p>
                     </div>
                 </div>
+            </div>
+            <div class="download-cv">
+                <button class="button-primary">Download CV</button>
             </div>
         </section>
 
