font awesome icon added

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                 <h1 class="banner-title">Mary Hardy</h1>
                 <p class="banner-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eveniet quae corrupti perspiciatis voluptas, sapiente ab laborum earum quo facilis quod repellendus impedit doloribus neque. Explicabo, commodi cupiditate! Voluptate, deleniti fugiat?</p>
     
-                <button class="button-primary">Download CV</button>
-                <button class="button-primary">Contact</button>
+                <button class="button-primary"> <i class="fa-solid fa-download"></i>Download CV</button>
+                <button class="button-primary"> <i class="fa-solid fa-phone"></i> Contact</button>
             </div>
             <img class="profile-pic" src="images/hardy.png" alt="">
         </div>
